k3s/kubernetes/lychee/mariadb-service.yaml
apiVersion: v1 
kind: Service
metadata: 
   name: mariadb
spec: 
   selector: 
      io.kompose.service: mariadb
   type: ClusterIP 
   ports:
   - port: 3306
     protocol: TCP
     targetPort: 3306
