k3s/kubernetes/lychee/lychee-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lychee-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: lychee.softiron.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  lychee
                port:
                  number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lyche-ingress-with-ssl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
    - host: lychee.softiron.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  lychee
                port:
                  number: 80
  tls:
  - hosts:
    - lychee.softiron.cloud
    secretName: lychee.softiron.cloud-tls
